--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Tre Column</title>
 </head>
 <body>
+    <div class="loading">
+        <img src="img/r1Logo.png">
+    </div>
     <main>
         <div class="col col-m bike-info">
             <img src="img/r1.png" alt="r1">
